--- a/Nana.protocol/Codice.html
+++ b/Nana.protocol/Codice.html
@@ -640,7 +640,7 @@
             <p class="note">⚠️ Warning: l’opzione “No” potrebbe non collaborare.</p>
             <div class="video-box" id="videoBox">
                 <video id="video" controls>
-                    <source src="Video/IMG_3243.mp4" type="video/mp4" />
+                    <source src="Video/video carino.mp4" type="video/mp4" />
                 </video>
                 <div class="video-actions">
                     <button id="videoDoneBtn" type="button">Hai finito il video?<br>Clicca qui!!!</button>
